// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing component menu row loading state 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "minHeight": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "rgb(18, 18, 18)",
              },
            ]
          }
        >
          test
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing component menu row on press event 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "minHeight": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "rgb(18, 18, 18)",
              },
            ]
          }
        >
          test
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing component menu row with title and content 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "minHeight": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "rgb(18, 18, 18)",
              },
            ]
          }
        >
          test title
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginLeft": 16,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 22,
            },
            Object {
              "color": "rgb(135, 135, 135)",
              "opacity": 1,
            },
          ]
        }
      >
        test content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Testing component menu row with title only 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "minHeight": 50,
    }
  }
  testID="base"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "rgb(18, 18, 18)",
              },
            ]
          }
        >
          test title
        </Text>
      </View>
    </View>
  </View>
</View>
`;
